# boozt-spec-builder

./: .gitignore  BRAND_ONBOARDING.md  README.md  boozt_spec_builder_build_kit.md  pyproject.toml
config/: boozt_rules.yaml  brands.yaml  color_word_map.yaml  header_synonyms.yaml  validators.yaml
config/order_overrides/: OR26BZQN0001.yaml
data/templates/: boozt_beauty_master.xlsx
docs/: webapp_self_serve_plan.md
src/bsb/: cli.py  compare.py  config.py  golden.py  models.py  pipeline.py  portal.py  probe.py
src/bsb/categorize/: rules.py
src/bsb/dg/: msds.py
src/bsb/emit/: writer.py
src/bsb/extract/: inci.py  llm.py  structured.py
src/bsb/fetch/: cache.py  firecrawl.py  ladder.py
src/bsb/ingest/: odm.py  review.py  template.py
src/bsb/normalize/: boozt.py
src/bsb/resolve/: archive.py  generic.py  market.py  orchestrator.py  validators.py
src/bsb/validate/: guide.py  language.py  lint.py  (+1 more)
tests/: conftest.py  test_benefit_family_and_lf_inci.py  test_brand_family_fallback.py  test_categorize.py  test_cli.py  test_color_code_proposals.py  test_compare_external.py  test_coverage_levers.py  test_emit_regression.py  test_eu_first_source.py  test_flammable_inci.py  test_guide_validations.py  test_inci_authority_folding.py  test_inci_extraction_gaps.py  test_ingest_review.py  test_lint_regressions.py  test_market_inci.py  test_models.py  test_names_policy.py  test_nars_adapter.py  test_odm_ingest.py  test_phase1_matrix.py  test_phase2_platform.py  test_template_map.py  test_writer.py
tests/fixtures/: aesop_final.xlsx  nars_wip.xlsx  olaplex_final.xlsx
(+8 files in other folders)
